--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
     <div class="music-select-wrapper">
       <label for="musicSelector">🎵 Choose Music:</label>
       <select id="musicSelector" class="music-selector">
-        <option value="your-music.mp3">Modern Day (First Wave)</option>
-        <option value="track2.mp3">Track 2</option>
-        <option value="track3.mp3">Track 3</option>
+        
+        <option value="my-music.mp3">Track 1</option>
+		<option value="your-music.mp3">Track 2</option>
+        <option value="my-music2.mp3">Track 3</option>
+		<option value="my-music3.mp3">Track 4(zombie on your lawn)</option>
       </select>
     </div>
     <audio id="backgroundMusic" loop>
-      <source src="your-music.mp3" type="audio/mp3" />
+      <source src="my-music.mp3" type="audio/mp3" />
       Your browser does not support the audio element.
     </audio>
   </div>
