--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <div class="game-container">
     <div class="base-container">
       <img id="base-image" src="Base.png" alt="Base Image" />
+	  <img id="butter1" src="butter1.png" style="display: none; position: absolute; top: 0; left: 0; z-index: 100;" />
+<button id="toggleButterBtn" style="position: absolute; top: 10px; left: 10px; z-index: 200;">Add Butter</button>
     </div>
 
     <div class="controls">
