--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <option value="my-music2.mp3">Track 3</option>
 		<option value="my-music3.mp3">Track 4(zombie on your lawn)</option>
 		<option value="my-music4.mp3">Track 5</option>
+		<option value="my-music5.mp3">Track 6</option>
 		
       </select>
     </div>
